apps/infra/istio/gatewayingress.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.moonpiedumpl.ing"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: https-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "*.moonpiedumpl.ing"
